---
= Novedades de las funciones de administración de fábrica de cargas de trabajo de BlueXP 
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Descubra las novedades de las funciones de administración de la fábrica de cargas de trabajo: Credenciales del proveedor de la nube, mejoras de CodeBox y mucho más.



== 04 de mayo de 2025



=== Soporte autocompleto de CloudShell

Al utilizar CloudShell de fábrica de carga de trabajo de BlueXP , puede comenzar a escribir un comando y presionar la tecla TAB para ver las opciones disponibles. Si existen múltiples posibilidades, la CLI mostrará una lista de sugerencias. Esta función mejora la productividad al minimizar los errores y acelerar la ejecución de comandos.



=== Terminología de permisos actualizada

La interfaz de usuario y la documentación de la fábrica de carga de trabajo ahora usan "solo lectura" para referirse a los permisos de lectura y "lectura/escritura" para referirse a los permisos de automatización.



== 30 de marzo de 2025



=== CloudShell informa de respuestas de errores generadas por IA para comandos de la CLI de ONTAP

Al usar CloudShell, cada vez que emita un comando de la CLI de ONTAP y se produce un error, puede obtener respuestas de error generadas por IA que incluyen una descripción del fallo, la causa del fallo y una resolución detallada.

link:https://docs.netapp.com/us-en/workload-setup-admin/use-cloudshell.html["Usar CloudShell"]



=== iam:SimulatePermissionPolicy actualización de permisos

Ahora puede administrar `iam:SimulatePrincipalPolicy` el permiso desde la consola de fábrica de cargas de trabajo cuando agrega credenciales de cuenta de AWS adicionales o agrega una nueva capacidad de carga de trabajo, como la carga de trabajo de GenAI.

link:https://docs.netapp.com/us-en/workload-setup-admin/permissions-reference.html#change-log["Log de cambios de referencia de permisos"]



== 02 de febrero de 2025


